--- a/txt/sts13/sts13-ntnu-core.bib
+++ b/txt/sts13/sts13-ntnu-core.bib
@@ -1,75 +1,391 @@
+
 @inproceedings{vsaric2012takelab,
-  title={TakeLab: systems for measuring semantic text similarity},
+  title={{TakeLab}: systems for measuring semantic text similarity},
   author={{\v{S}}ari{\'c}, Frane and Glava{\v{s}}, Goran and Karan, Mladen and {\v{S}}najder, Jan and Ba{\v{s}}i{\'c}, Bojana Dalbelo},
-  booktitle={Proceedings of the First Joint Conference on Lexical and Computational Semantics-Volume 1: Proceedings of the main conference and the shared task, and Volume 2: Proceedings of the Sixth International Workshop on Semantic Evaluation},
+ crossref = {STARSEM12},
   pages={441--448},
-  year={2012},
-  organization={Association for Computational Linguistics}
 }
 
 @inproceedings{bar2012ukp,
-  title={UKP: Computing semantic textual similarity by combining multiple content similarity measures},
+  title={{UKP}: Computing semantic textual similarity by combining multiple content similarity measures},
   author={B{\"a}r, Daniel and Biemann, Chris and Gurevych, Iryna and Zesch, Torsten},
-  booktitle={Proceedings of the First Joint Conference on Lexical and Computational Semantics-Volume 1: Proceedings of the main conference and the shared task, and Volume 2: Proceedings of the Sixth International Workshop on Semantic Evaluation},
+ crossref = {STARSEM12},
   pages={435--440},
   year={2012},
-  organization={Association for Computational Linguistics}
 }
 
 @article{DeerwesterDumaisFurnas:1990,
-	Author = {Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
+    Author = {Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
 	Date-Added = {2011-09-15 21:18:59 +0200},
 	Date-Modified = {2011-09-15 21:19:22 +0200},
-	Journal = {Journal of the American society for information science},
+	Journal = {Journal of the American Society for Information Science},
 	Keywords = {semantic similarity, IR},
 	Number = {6},
 	Pages = {391--407},
 	Publisher = {Citeseer},
-	Title = {Indexing by latent semantic analysis},
+	Title = {Indexing by Latent Semantic Analysis},
 	Volume = {41},
 	Year = {1990}}
+    
 
 @article{Kuhn1955,
 author = {Kuhn, HW},
 journal = {Naval research logistics quarterly},
 pages = {83--97},
-title = {{The Hungarian method for the assignment problem}},
+title = {The {H}ungarian Method for the Assignment Problem},
 url = {http://onlinelibrary.wiley.com/doi/10.1002/nav.3800020109/full},
 volume = {2},
 year = {1955}
 }
 
-@article{Levenshtein1966,
-author = {Levenshtein, VI},
-journal = {Soviet physics doklady},
-title = {{Binary codes capable of correcting deletions, insertions and reversals}},
-url = {http://adsabs.harvard.edu/abs/1966SPhD...10..707L\%E5\%AF\%86},
-year = {1966}
+@Article{Levenshtein:66,
+  key =     {Levenshtein 1966},
+  author = 	{Levenshtein, Vladimir I.},
+  year = 	1966,
+  month = 	Feb,
+  title = 	{Binary Codes Capable of Correcting Deletions,
+		 Insertions and Reversals},
+  journal = 	{Soviet Physics Doklady},
+  volume = 	10,
+  number = 	8,
+  pages = 	{707-710},
 }
 
 @article{Leacock1998,
 author = {Leacock, C and Chodorow, M},
 journal = {WordNet: An electronic lexical \ldots},
-title = {{Combining local context and WordNet similarity for word sense identification}},
+title = {Combining Local Context and {WordNet} Similarity for Word Sense Identification},
 url = {http://books.google.com/books?hl=en\&lr=\&id=Rehu8OOzMIMC\&oi=fnd\&pg=PA265\&dq=Combining+local+context+and+WordNet+similarity+for+word+sense+identification.\&ots=IpmcIkYYl7\&sig=D7QjYKTTpLBgLNImEm70-7aUsUo},
 year = {1998}
 }
 
-@inproceedings{Cunningham,
-author = {Cunningham, H and Maynard, D and Bontcheva, K and Tablan, V},
-booktitle = {Proc. 40th Anniversary Meeting of the \ldots},
-title = {{GATE: A framework and graphical development environment for robust NLP tools and applications, 2002}},
-url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:GATE:+A+Framework+and+Graphical+Development+Environment+for+Robust+NLP+Tools+and+Applications\#5}
+@InProceedings{CunninghamEA:02,
+  key = 	{Cunningham {\em et al.} 2002},
+  author = 	{Cunningham, Hamish and Diana Maynard  
+		 and Kalina Bontcheva and Valentin Tablan},
+  title = 	{{GATE}: A Framework and Graphical Development Environment 
+		 for Robust {NLP} Tools and Applications},
+  crossref = 	{ACL02},
+  pages = 	{168-175},
 }
 
-@article{Karnick2012,
+@InProceedings{AgirreEA:12, 
+   author    = {Agirre, Eneko  and  Cer, Daniel  and  Diab, Mona  and  Gonzalez-Agirre, Aitor}, 
+   title     = {{SemEval-2012 Task 6}: A Pilot on Semantic Textual Similarity}, 
+   crossref = {STARSEM12},
+   pages = {385-393},
+} 
+
+@InProceedings{AgirreEA:13, 
+   author    = {Agirre, Eneko  and  Cer, Daniel  and  Diab, Mona  and  Gonzalez-Agirre, Aitor and Guo, Weiwei}, 
+   title     = {{*SEM 2013 Shared Task}: Semantic Textual Similarity, including a Pilot on Typed-Similarity}, 
+   booktitle = {{*SEM 2013}: The Second Joint Conference on Lexical and Computational Semantics}, 
+   year      = {2013}, 
+   publisher = {Association for Computational Linguistics}, 
+} 
+
+@inproceedings{Tovar2012,
+author = {Tovar, Mireya and Reyes, JA and Montes, A},
+pages = {502--505},
+title = {{BUAP}: a first approximation to relational similarity measuring},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Sokolov2012,
+author = {Sokolov, Artem},
+pages = {543--546},
+title = {{LIMSI}: learning semantic similarity by selecting random word subsets},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Karnick2012,
 author = {Karnick, Harish and Satapathy, Shrutiranjan and Bhagwani, Sumit},
-file = {:C$\backslash$:/Users/Gleb/Documents/Mendeley Desktop//Karnick, Satapathy, Bhagwani - 2012 - sranjans Semantic Textual Similarity using Maximal Bipartite Graph Matching.pdf:pdf},
 pages = {579--585},
-title = {{sranjans: Semantic Textual Similarity using Maximal Bipartite Graph Matching}},
-url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:sranjans+:+Semantic+Textual+Similarity+using+Maximal+Weighted+Bipartite+Graph+Matching\#0},
-year = {2012}
+title = {{sranjans}: Semantic Textual Similarity using Maximal Bipartite Graph Matching},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Guo2012,
+author = {Guo, Weiwei and Diab, Mona},
+pages = {586--590},
+title = {{Weiwei}: A Simple Unsupervised Latent Semantics based Approach for Sentence Similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Semeraro2012,
+author = {Semeraro, Giovanni and Aldo, Bari and Orabona, Via E},
+pages = {591--596},
+title = {{UNIBA}: Distributional Semantics for Textual Similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Dinu2012,
+author = {Dinu, Georgiana and Thater, Stefan},
+pages = {603--607},
+title = {{Saarland}: Vector-based models of semantic textual similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Banea2012,
+author = {Banea, Carmen and Hassan, Samer and Mohler, Michael and Mihalcea, Rada},
+pages = {635--642},
+title = {{UNT}: a supervised synergistic approach to semantic text similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Biggins2012,
+author = {Biggins, Sam and Mohammed, Shaabi and Oakley, Sam and Stringer, Luke and Stevenson, Mark and Priess, Judita},
+pages = {655--661},
+title = {{University of Sheffield}: Two Approaches to Semantic Text Similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Jha2012,
+author = {Jha, Sneha and Schwartz, H. A. and Ungar, L. H.},
+pages = {679--683},
+title = {{Penn}: using word similarities to better estimate sentence similarity},
+crossref = {STARSEM12},
+}
+
+@inproceedings{Kanerva2000,
+	Author = {Kanerva, P. and Kristoferson, J. and Holst, A.},
+	Booktitle = {Proceedings of the 22nd Annual Conference of the Cognitive Science Society},
+	Editor = {L.R. Gleitman and A.K. Josh},
+	Keywords = {random indexing},
+	Pages = {1036},
+	Publisher = {Erlbaum},
+	Title = {Random indexing of text samples for latent semantic analysis},
+	Year = {2000}
+}
+
+@inproceedings{Reisinger2010,
+    author = {Reisinger, Joseph and Mooney, R.J.},
+    booktitle = {Human Language Technologies: The 2010 Annual Conference of the North American Chapter of the Association for Computational Linguistics},
+    number = {June},
+    pages = {109--117},
+    title = {Multi-prototype vector-space models of word meaning},
+    year = {2010}
+}
+
+@inproceedings{Sahlgren2005,
+	Author = {Sahlgren, M.},
+	Booktitle = {Methods and Applications of Semantic Indexing Workshop at the 7th International Conference on Terminology and Knowledge Engineering, TKE},
+	Title = {An Introduction to Random Indexing},
+	Volume = {5},
+	Year = {2005}
+}
+
+@article{Lughofer2008,
+    author = {Lughofer, Edwin},
+    issn = {00313203},
+    journal = {Pattern Recognition},
+    month = mar,
+    number = {3},
+    pages = {995--1011},
+    title = {{Extensions of vector quantization for incremental clustering}},
+    volume = {41},
+    year = {2008}
+}
+
+@article{Sahlgren2008,
+	Author = {Sahlgren, Magnus and Holst, Anders and Kanerva, Pentti},
+	Journal = {Proceedings of the 30th Conference of the Cognitive Science Society},
+	Title = {{Permutations as a Means to Encode Order in Word Space}},
+	Year = {2008}
+}
+
+@misc{Hassel2004,
+    Author = {Hassel, Martin},
+	Title = {{JavaSDM package}},
+	Url = {http://www.nada.kth.se/~xmartin/java/},
+    Year = {2004}
+}
+
+@proceedings{STARSEM12,
+  key = {{*SEM}},
+  booktitle = {Proceedings of the First Joint Conference on Lexical and Computational Semantics {(*SEM)}},
+  title = {Proceedings of the First Joint Conference on Lexical and Computational Semantics {(*SEM)}},
+  volume = {2: Proceedings of the Sixth International Workshop on Semantic Evaluation},
+  year={2012},
+  month=Jun,
+  organization={Association for Computational Linguistics},
+  address = {Montreal, Canada},
 }
 
 
+@Proceedings{ACL02,
+  key =     {ACL02},
+  year = 	2002,
+  month = 	Jul,
+  title = 	{Proceedings of the 40th Annual Meeting of the
+		 Association for {C}omputational {L}inguistics},
+  booktitle = 	{Proceedings of the 40th Annual Meeting of the
+		 Association for {C}omputational {L}inguistics},
+  address = 	{Philadelphia, Pennsylvania},
+  organization = {ACL},
+}
 
+@inproceedings{Gabrilovich2007,
+    author = {Gabrilovich, Evgeniy and Markovitch, Shaul},
+    booktitle = {Proceedings of The Twentieth International Joint Conference for Artificial Intelligence.},
+    keywords = {learning,natural language processing,web mining},
+    pages = {1606--1611},
+    title = {{Computing semantic relatedness using wikipedia-based explicit semantic analysis}},
+    year = {2007}
+}
+
+@article {bioinflmu-254,
+        title = {{RelEx - Relation extraction using dependency parse trees}},
+        journal = {Bioinformatics},
+        volume = {23},
+        number = {3},
+        year = {2007},
+        pages = {365-371},
+        abstract = {MOTIVATION: The discovery of regulatory pathways, signal cascades,
+metabolic processes or disease models requires knowledge on individual relations
+like e.g. physical or regulatory interactions between genes and proteins. Most
+interactions mentioned in the free text of biomedical publications are not yet
+contained in structured databases. RESULTS: We developed RelEx, an approach for
+relation extraction from free text. It is based on natural language preprocessing
+producing dependency parse trees and applying a small number of simple rules to
+these trees. We applied RelEx on a comprehensive set of one million MEDLINE
+abstracts dealing with gene and protein relations and extracted approximately
+150,000 relations with an estimated performance of both 80\% precision and 80\%
+recall. AVAILABILITY: The used natural language preprocessing tools are free for
+use for academic research. Test sets and relation term lists are available from
+our website (http://www.bio.ifi.lmu.de/publications/RelEx/).},
+        keywords = {networks, textmining},
+        doi = {10.1093/bioinformatics/btl616},
+        author = {Katrin Fundel and K{\"u}ffner, R and Ralf Zimmer}
+}
+
+@MastersThesis{rokenes13,
+ author = {Håkon R\o{}kenes},
+ title = {Graph-{E}dit {D}istance {A}pplied to the {T}ask of {D}etecting {P}lagiarism},
+ school = {Norwegian University of Science and Technology},
+ year = {2013},
+ OPTkey = {},
+ OPTtype = {},
+ OPTaddress = {},
+ OPTmonth = {},
+ OPTnote = {},
+ OPTannote = {},
+ OPTurl = {},
+ OPTurldate = {},
+ OPTlastchecked = {},
+ OPTdoi = {},
+ OPTissn = {},
+ OPTlocalfile = {},
+ OPTabstract = {},
+ OPTkeywords = {},
+}
+
+@inproceedings{Hart:2008:OSF:1566174.1566223,
+ author = {Hart, David and Goertzel, Ben},
+ title = {OpenCog: A Software Framework for Integrative Artificial General Intelligence},
+ booktitle = {Proceedings of the 2008 conference on Artificial General Intelligence 2008: Proceedings of the First AGI Conference},
+ year = {2008},
+ isbn = {978-1-58603-833-5},
+ pages = {468--472},
+ numpages = {5},
+ url = {http://dl.acm.org/citation.cfm?id=1566174.1566223},
+ acmid = {1566223},
+ publisher = {IOS Press},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
+
+@InProceedings{bhagwani-satapathy-karnick:2012:STARSEM-SEMEVAL,
+  author    = {Bhagwani, Sumit  and  Satapathy, Shrutiranjan  and  Karnick, Harish},
+  title     = {sranjans : Semantic Textual Similarity using Maximal Weighted Bipartite Graph Matching},
+  booktitle = {{*SEM 2012}: The First Joint Conference on Lexical and Computational Semantics -- Volume 1: Proceedings of the main conference and the shared task, and Volume 2: Proceedings of the Sixth International Workshop on Semantic Evaluation {(SemEval 2012)}},
+  month     = {7-8 June},
+  year      = {2012},
+  address   = {Montr\'{e}al, Canada},
+  publisher = {Association for Computational Linguistics},
+  pages     = {579--585},
+  url       = {http://www.aclweb.org/anthology/S12-1085}
+}
+
+@InProceedings{singh-bhattacharya-bhattacharyya:2012:STARSEM-SEMEVAL,
+  author    = {Singh, Janardhan  and  Bhattacharya, Arindam  and  Bhattacharyya, Pushpak},
+  title     = {janardhan: Semantic Textual Similarity using Universal Networking Language graph matching},
+  booktitle = {{*SEM 2012}: The First Joint Conference on Lexical and Computational Semantics -- Volume 1: Proceedings of the main conference and the shared task, and Volume 2: Proceedings of the Sixth International Workshop on Semantic Evaluation {(SemEval 2012)}},
+  month     = {7-8 June},
+  year      = {2012},
+  address   = {Montr\'{e}al, Canada},
+  publisher = {Association for Computational Linguistics},
+  pages     = {662--666},
+  url       = {http://www.aclweb.org/anthology/S12-1098}
+}
+
+@INPROCEEDINGS{Nivre06maltparser:a,
+    author = {Joakim Nivre and Johan Hall and Jens Nilsson},
+    title = {MaltParser: A data-driven parser-generator for dependency parsing},
+    booktitle = {In Proc. of LREC-2006},
+    year = {2006},
+    pages = {2216--2219}
+}
+
+@incollection{VapnikEA:97,
+  title={Support vector method for function approximation, 
+    regression estimation, and signal processing},
+  author={Vapnik, Vladimir and Golowich, Steven E. and Smola, Alex},
+  booktitle={Advances in Neural Information Processing Systems},
+  editor={Michael C. Mozer and Michael I. Jordan and Thomas Petsche},
+  pages={281-287},
+  volume = 9,
+  year=1997,
+  publisher={MIT Press},
+  address = {Cambridge, Massachusetts},
+}
+
+@incollection{Karlgren2001,
+    author = {Karlgren, Jussi and Sahlgren, Magnus},
+    booktitle = {Foundations of real-world intelligence},
+    chapter = {26},
+    editor = {Uesaka, Y. and Kanerva, P. and Asoh, H.},
+    pages = {294--311},
+    publisher = {Stanford: CSLI Publications},
+    title = {{From Words to Understanding}},
+    year = {2001}
+}
+
+@Book{Krippendorff:04,
+  key =     {Krippendorff 2004},
+  author = 	{Krippendorff, Klaus},
+  year = 	2004,
+  title = 	{Content Analysis, An Introduction to Its Methodology},
+  edition =	2,
+  publisher = 	{Sage Publications},
+  address=	{Thousand Oaks, California}
+}
+
+@article{FankhauserRiesenBunke:2011,
+    Author = {Fankhauser, S. and Riesen, K. and Bunke, H.},
+	Journal = {Graph-Based Representations in Pattern Recognition},
+	Pages = {102--111},
+	Title = {Speeding Up Graph Edit Distance Computation through Fast Bipartite Matching},
+	Year = {2011}}
+
+@article{RiesenBunke:2009,
+	Author = {Riesen, K. and Bunke, H.},
+	Journal = {Image and Vision Computing},
+	Number = {7},
+	Pages = {950--959},
+	Title = {Approximate graph edit distance computation by means of bipartite graph matching},
+	Volume = {27},
+	Year = {2009}}
+
+@book{joachims1998text,
+  title={Text categorization with support vector machines: Learning with many relevant features},
+  author={Joachims, Thorsten},
+  year={1998},
+  publisher={Springer}
+}
+
+@phdthesis{ahn2011automatically,
+  title={Automatically detecting authors' native language},
+  author={Ahn, Charles S},
+  year={2011},
+  school={Monterey, California. Naval Postgraduate School}
+}
